# XAI

./: README.md  projet.ipynb  projet_src.ipynb  pyproject.toml
src/xai_bert/: __init__.py  anisotropy.py  clipping.py  data.py  embeddings.py  modeling.py  outliers.py  plotting.py  pretraining.py  probe.py  self_similarity.py  token_outlier.py  types.py  word_sense.py
